refactoring and added new functionality to RecipeService