@@ -18,11 +18,10 @@ public class RecipeController {
 
     private final RecipeService recipeService;
 
-    @RequestMapping("/recipe/show/{id}")
+    @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model) {
 
-	model.addAttribute("recipe", recipeService.findById(new Long(id)));
-
+	model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
 	return "recipe/show";
     }
 
@@ -33,12 +32,17 @@ public class RecipeController {
 	return "recipe/recipeform";
     }
 
-    @PostMapping
-    @RequestMapping("recipe")
-    public String saveOrUpdate(@ModelAttribute RecipeCommand command) {
-	RecipeCommand saveRecipeCommand = recipeService.saveRecipeCommand(command);
+    @RequestMapping("recipe/{id}/update")
+    public String updateRecipe(@PathVariable String id, Model model) {
+	model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
+	return "recipe/recipeform";
+    }
 
-	return "redirect:/recipe/show/" + saveRecipeCommand.getId();
+    @PostMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute RecipeCommand command) {
+	RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+
+	return "redirect:/recipe/" + savedCommand.getId() + "/show";
     }
 
 }
